added benchmark for SelfValidating and ValidationMethod